--- a/demo/function/pyproject.toml
+++ b/demo/function/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Josh Wiley <josh@cloudbend.dev>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pyiceberg = { git = "https://github.com/mr-brobot/iceberg.git", branch = "lambda", subdirectory = "python", extras = ["glue", "s3fs", "pyarrow"] }
+pyiceberg = { git = "https://github.com/mr-brobot/iceberg.git", rev = "5b76fe2a2", subdirectory = "python", extras = ["glue", "s3fs", "pyarrow"] }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
